--- a/src/main/webapp/receptionist_dashboard.html
+++ b/src/main/webapp/receptionist_dashboard.html
@@ -4,19 +4,30 @@
   <meta charset="UTF-8">
   <title>Receptionist Dashboard</title>
   <style>
-    body { background: #f4f6f7; font-family: sans-serif; }
-    .dashboard-container { max-width: 1000px; margin: 30px auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+    body { background: #f4f6f7; font-family: sans-serif; padding: 20px; }
+    .dashboard-container { max-width: 1000px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
     .header { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #ecf0f1; padding-bottom: 15px; margin-bottom: 20px; }
-    .btn-logout { background: #e74c3c; color: white; text-decoration: none; padding: 8px 15px; border-radius: 4px; }
 
+    .btn-logout { background: #e74c3c; color: white; text-decoration: none; padding: 8px 15px; border-radius: 4px; font-weight: bold; }
+
+    /* Action Cards Grid */
     .action-cards { display: flex; gap: 20px; margin-bottom: 30px; }
-    .card { flex: 1; background: #3498db; color: white; padding: 20px; border-radius: 8px; text-align: center; cursor: pointer; text-decoration: none; font-weight: bold; }
+    .card { flex: 1; padding: 20px; border-radius: 8px; text-align: center; cursor: pointer; text-decoration: none; font-weight: bold; color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); transition: 0.2s; }
     .card:hover { transform: translateY(-3px); }
 
+    .card-booking { background: #3498db; }
+    .card-profile { background: #9b59b6; }
+    .card-help { background: #f1c40f; color: #333; }
+
+    /* Profile Form (Hidden by default) */
+    #profileSection { display: none; background: #ecf0f1; padding: 20px; border-radius: 8px; margin-bottom: 20px; border: 1px solid #ddd; }
+    input { width: 100%; padding: 10px; margin: 5px 0 15px 0; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+    .btn-save { background: #27ae60; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px; }
+
+    /* Table */
     table { width: 100%; border-collapse: collapse; }
     th { background: #2c3e50; color: white; padding: 12px; text-align: left; }
     td { padding: 12px; border-bottom: 1px solid #ddd; }
-    .badge { background: #2ecc71; color: white; padding: 3px 8px; border-radius: 10px; font-size: 12px; }
     .cancel-btn { background: #e74c3c; color: white; border: none; padding: 5px 10px; border-radius: 3px; cursor: pointer; }
   </style>
 </head>
@@ -24,13 +35,30 @@
 
 <div class="dashboard-container">
   <div class="header">
-    <h2>👋 Receptionist Dashboard</h2>
+    <h2>👋 Welcome, <span id="userNameDisplay">Receptionist</span></h2>
     <a href="#" onclick="logout()" class="btn-logout">Logout</a>
   </div>
 
   <div class="action-cards">
-    <a href="search_app.html" class="card">🔍 New Booking</a>
-    <a href="help.jsp" class="card" style="background: #f1c40f; color: #333;">❓ Help Guide</a>
+    <a href="search_app.html" class="card card-booking">🔍 New Booking</a>
+    <div onclick="toggleProfile()" class="card card-profile">👤 My Profile / Password</div>
+    <a href="help.html" class="card card-help">❓ Help Guide</a>
+  </div>
+
+  <div id="profileSection">
+    <h3 style="margin-top:0;">Edit Profile</h3>
+    <p style="font-size: 13px; color: #7f8c8d;">Leave password blank if you don't want to change it.</p>
+
+    <form onsubmit="updateProfile(event)">
+      <label><strong>Full Name</strong></label>
+      <input type="text" id="pName" required>
+
+      <label><strong>New Password</strong></label>
+      <input type="password" id="pPass" placeholder="Enter new password to change...">
+
+      <button type="submit" class="btn-save">Update Profile</button>
+      <button type="button" onclick="toggleProfile()" style="background:none; border:none; color:#7f8c8d; cursor:pointer; margin-left:10px;">Cancel</button>
+    </form>
   </div>
 
   <h3>📅 Recent Reservations</h3>
@@ -45,7 +73,50 @@
 </div>
 
 <script>
+  // 1. INITIAL LOAD
   window.onload = async function() {
+    loadReservations();
+
+    // Fetch current user details via a trick: We ask the backend 'Who am I?'
+    // (Usually handled by session, here we assume name is known or we can fetch it)
+    // For simplicity, we just let the user type their new name.
+  }
+
+  // 2. TOGGLE PROFILE SECTION
+  function toggleProfile() {
+    const sec = document.getElementById('profileSection');
+    sec.style.display = (sec.style.display === 'block') ? 'none' : 'block';
+  }
+
+  // 3. UPDATE PROFILE LOGIC
+  async function updateProfile(e) {
+    e.preventDefault();
+    const newName = document.getElementById('pName').value;
+    const newPass = document.getElementById('pPass').value;
+
+    const params = new URLSearchParams();
+    params.append('name', newName);
+    params.append('password', newPass);
+
+    try {
+      const res = await fetch('updateProfile', { method: 'POST', body: params });
+      const json = await res.json();
+
+      if (json.status === 'success') {
+        alert("✅ Profile Updated Successfully!");
+        document.getElementById('userNameDisplay').innerText = newName;
+        document.getElementById('pPass').value = ""; // Clear password field
+        toggleProfile(); // Close section
+      } else {
+        alert("❌ Error: " + json.message);
+      }
+    } catch (err) {
+      alert("❌ Server Error");
+    }
+  }
+
+  // 4. LOAD RESERVATIONS
+  async function loadReservations() {
     const tableBody = document.getElementById('tableBody');
     try {
       const response = await fetch('viewReservations');
@@ -72,7 +143,7 @@
   async function cancelBooking(id) {
     if(!confirm("Cancel this booking?")) return;
     await fetch('cancelReservation?id=' + id, { method: 'POST' });
-    window.location.reload();
+    loadReservations();
   }
 
   async function logout() {
